fix: cal-deployment

--- a/package.json
+++ b/package.json
@@ -3,16 +3,38 @@
   "version": "0.0.0",
   "private": true,
   "workspaces": [
-    "apps/*",
-    "apps/api/*",
-    "packages/*",
+    "apps/web",
+    "packages/prisma",
+    "packages/lib",
+    "packages/ui",
+    "packages/trpc",
+    "packages/atoms",
+    "packages/config",
+    "packages/types",
+    "packages/dayjs",
+    "packages/tsconfig",
+    "packages/eslint-plugin-eslint",
+    "packages/dailyvideo",
+    "packages/office365video",
+    "packages/zoomvideo",
+    "packages/platform-constants",
+    "packages/platform-enums",
+    "packages/platform-types",
+    "packages/app-store-cli",
+    "packages/app-store",
+    "packages/features",
+    "packages/emails",
+    "packages/embeds",
     "packages/embeds/*",
-    "packages/features/*",
+    "packages/debugging",
+    "packages/sms",
+    "packages/kysely",
+    "packages/tsconfig",
+    "packages/eslint-plugin",
+    "packages/platform",
     "packages/app-store/*",
-    "packages/app-store/ee/*",
-    "packages/platform/*",
-    "packages/platform/examples/base",
-    "example-apps/*"
+    "packages/features/*",
+    "packages/platform/*"
   ],
   "scripts": {
     "app-store-cli": "yarn workspace @calcom/app-store-cli",
@@ -108,6 +130,7 @@
     "prettier": "^2.8.6",
     "prismock": "^1.33.4",
     "resize-observer-polyfill": "^1.5.1",
+    "ts-node": "^10.9.2",
     "tsc-absolute": "^1.0.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.1",
